--- a/fstab.yaml
+++ b/fstab.yaml
@@ -3,3 +3,7 @@ mountpoints:
     url: "https://author-p105957-e1283031.adobeaemcloud.com/ui#/aem/sites.html/content/aem-edge"
     type: "markup"
     suffix: ".html"
+  /:
+    url: "https://publish-p105957-e1283031.adobeaemcloud.com/content/aem-edge"
+    type: "markup"
+    suffix: ".html"
